--- a/experiments/lx/lx_1_strech.yaml
+++ b/experiments/lx/lx_1_strech.yaml
@@ -13,6 +13,7 @@ DATASET:
   ROOT: '../data/'
   TEST_SET: 'list/lx/test.lst'
   TRAIN_SET: 'list/lx/train.lst'
+  VAL_SET: 'list/lx/val.lst'
   NUM_CLASSES: 3
 MODEL:
   NAME: seg_hrnet
@@ -76,10 +77,10 @@ TRAIN:
   - 800
   - 600
   BASE_SIZE: 600
-  BATCH_SIZE_PER_GPU: 1
+  BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 100
+  END_EPOCH: 1000
   RESUME: true
   OPTIMIZER: sgd
   LR: 0.01
