--- a/experiments/lx/lx_1_strech.yaml
+++ b/experiments/lx/lx_1_strech.yaml
@@ -3,7 +3,7 @@ CUDNN:
   DETERMINISTIC: false
   ENABLED: true
 GPUS: (1,3)
-OUTPUT_DIR: 'output'
+OUTPUT_DIR: 'output/percep_loss'
 LOG_DIR: 'log'
 WORKERS: 4
 PRINT_FREQ: 100
@@ -76,8 +76,8 @@ TRAIN:
   IMAGE_SIZE:
   - 400
   - 300
-  BASE_SIZE: 800
-  BATCH_SIZE_PER_GPU: 2
+  BASE_SIZE: 400
+  BATCH_SIZE_PER_GPU: 4
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 10000
