--- a/experiments/lx/lx_1_strech.yaml
+++ b/experiments/lx/lx_1_strech.yaml
@@ -2,11 +2,11 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (1,3)
-OUTPUT_DIR: 'output/percep_loss'
+GPUS: (0,1,2,3)
+OUTPUT_DIR: 'output/HR'
 LOG_DIR: 'log'
 WORKERS: 4
-PRINT_FREQ: 100
+PRINT_FREQ: 300
 
 DATASET:
   DATASET: lx
@@ -76,11 +76,11 @@ TRAIN:
   IMAGE_SIZE:
   - 400
   - 300
-  BASE_SIZE: 400
-  BATCH_SIZE_PER_GPU: 4
+  BASE_SIZE: 800
+  BATCH_SIZE_PER_GPU: 1
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 10000
+  END_EPOCH: 50000
   RESUME: true
   OPTIMIZER: sgd
   LR: 0.01
