--- a/experiments/lx/lx_1_strech.yaml
+++ b/experiments/lx/lx_1_strech.yaml
@@ -2,8 +2,8 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0,1,2,3)
-OUTPUT_DIR: 'output/HR'
+GPUS: (2,3)
+OUTPUT_DIR: 'output/new_img'
 LOG_DIR: 'log'
 WORKERS: 4
 PRINT_FREQ: 300
